<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_control"
            android:title="@string/control_panel"/>
        <item
            android:id="@+id/nav_data"
            android:icon="@drawable/ic_home"
            android:title="@string/data_panel"/>
        <item
            android:id="@+id/nav_calibration"
            android:icon="@drawable/ic_calibration"
            android:title="@string/Attitude_calibration"/>
        <item
            android:id="@+id/nav_connection"
            android:icon="@drawable/ic_settings"
            android:title="@string/advanced_setup"/>
    </group>
</menu>
