<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Top toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_home"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/material_dynamic_primary50"
        android:elevation="4dp"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="数据面板"
        app:titleTextColor="#FFFFFF" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="107dp"
        android:layout_height="146dp"
        android:importantForAccessibility="no"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toStartOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_home"
        app:srcCompat="@drawable/ranging" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="107dp"
        android:layout_height="146dp"
        android:layout_marginTop="12dp"
        android:importantForAccessibility="no"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_home"
        app:srcCompat="@drawable/speedometer" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="107dp"
        android:layout_height="146dp"
        android:layout_marginTop="12dp"
        android:importantForAccessibility="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_home"
        app:srcCompat="@drawable/gyroscope_image" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="107dp"
        android:layout_height="43dp"
        android:layout_marginTop="16dp"
        android:gravity="start|center"
        android:text="@string/RealSpeed_name"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="107dp"
        android:layout_height="43dp"
        android:layout_marginTop="16dp"
        android:gravity="start|center"
        android:text="@string/NormalSpeed_name"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="107dp"
        android:layout_height="43dp"
        android:layout_marginTop="16dp"
        android:gravity="start|center"
        android:text="@string/Distant_name"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="107dp"
        android:layout_height="43dp"
        android:layout_marginTop="16dp"
        android:gravity="start|center"
        android:text="@string/Pitch_name"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="107dp"
        android:layout_height="43dp"
        android:layout_marginTop="16dp"
        android:gravity="start|center"
        android:text="@string/Roll_name"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/textView24"
        app:layout_constraintStart_toStartOf="@+id/textView24"
        app:layout_constraintTop_toBottomOf="@+id/textView24" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="107dp"
        android:layout_height="43dp"
        android:layout_marginTop="16dp"
        android:gravity="start|center"
        android:text="@string/Yaw_name"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/textView26"
        app:layout_constraintStart_toStartOf="@+id/textView26"
        app:layout_constraintTop_toBottomOf="@+id/textView26" />

</androidx.constraintlayout.widget.ConstraintLayout>
